--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <div id="app">加载中...</div>
 <!-- docsify的js依赖 -->
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+<!-- docsify-edit-on-github  -->
+<script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
 
 
 <script>
@@ -42,7 +44,24 @@
             subMaxLevel: 4,
             // 小屏设备下合并导航栏到侧边栏
             mergeNavbar: true,
+
+              plugins: [
+                          EditOnGithubPlugin.create(
+                            'https://github.com/boxtrade/docsify_sample/edit/main/',
+                            null,
+                            function(file) {
+                              if (file.indexOf('en') === -1) {
+                                return '编辑'
+                              } else {
+                                return 'edit on git'
+                              }
+                            }
+                          )
+                      ]
         }
+
+
+
 
 </script>
 
@@ -52,7 +71,6 @@
 <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
 <!-- 图片放大缩小支持 -->
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
-
 </body>
 
 </html>
