新增 页脚信息插件

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
         homepage:
           'https://raw.githubusercontent.com/chenGit1763113879QQ/404StarLink/master/README.md',
 
+         // 页脚信息插件
+        loadFooter: true,
+        loadFooter: 'https://raw.githubusercontent.com/boxtrade/boxtrade.github.io/main/_footer.md'
 
         }
 
@@ -125,6 +128,8 @@
 <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
 
 <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
+<!-- 页脚信息 -->
+<script src="//cdn.jsdelivr.net/npm/@alertbox/docsify-footer/dist/docsify-footer.min.js"></script>
 
 
 </script>
